--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,26 +417,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(196, 4)\n",
+      "(1339, 4)\n",
+      "(1535, 4)\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\daisy\\AppData\\Local\\Temp\\ipykernel_27984\\1677377919.py:3: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  rot_tom_df['lowercase_movie_title'] = rot_tom_df['lowercase_movie_title'].str.replace('^The ', '', case=False)\n"
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/ipykernel_launcher.py:3: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1143"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -449,12 +448,28 @@
     "combined_df = imsdb_df.merge(rot_tom_df, how = \"left\", on = \"lowercase_movie_title\")\n",
     "combined_df.head()\n",
     "combined_df[\"rotten_tomatoes_link\"].notna().sum()\n",
-    "\n"
+    "\n",
+    "\n",
+    "combined_to_csv = combined_df[[\"movie_title_x\", \"tomatometer_rating\", \"audience_rating\"]]\n",
+    "combined_to_csv = combined_to_csv.replace(' ', '-', regex=True)\n",
+    "combined_to_csv.head()\n",
+    "combined_to_csv.to_csv(\"combined_to_csv.csv\")\n",
+    "combined_to_csv = combined_to_csv.rename(columns= {\"movie_title_x\" : \"IMSDB_Title\", \"tomatometer_rating\" : \"CriticScore\", \"audience_rating\" : \"AudienceScore\"})\n",
+    "combined_to_csv[\"RT_Title\"] = combined_to_csv[\"IMSDB_Title\"]\n",
+    "\n",
+    "unmatched = pd.read_csv(\"rt_scores.csv\")\n",
+    "unmatched = unmatched.replace(' ', '-', regex=True)\n",
+    "\n",
+    "print(unmatched.shape)\n",
+    "print(combined_to_csv.shape)\n",
+    "all = pd.concat([unmatched, combined_to_csv])\n",
+    "print(all.shape)\n",
+    "all.to_csv(\"all_rt_scores.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
